--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
   "main": "index.js",
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@uiw/react-codemirror": "^4.23.6",
     "ansi-regex": "^6.1.0",
     "ansi-styles": "^6.2.1",
     "any-promise": "^1.3.0",
@@ -148,7 +151,6 @@
     "wrap-ansi-cjs": "^7.0.0",
     "yaml": "^2.6.1"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next dev"
